--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,35 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <meta content="yes" name="apple-mobile-web-app-capable" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/App-icon@3x.png">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/App-icon@3x.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/App-icon@3x.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/App-icon@3x.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/App-icon@3x.png" sizes="192x192">
+    <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/App-icon@3x.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/App-icon@3x.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/App-icon@3x.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/App-icon@3x.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/App-icon@3x.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/App-icon@3x.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/App-icon@3x.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/App-icon@3x.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/App-icon@3x.png">
+    <meta name="msapplication-TileColor" content="#474747">
+    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/App-icon@3x.png">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.css">
-    <title>React App</title>
+    <title>Oldham</title>
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function() {
+          navigator.serviceWorker.register('/service-worker.js');
+        });
+      }
+    </script>
   </body>
 </html>
