--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, minimum-scale=1.0,">
     <meta content="yes" name="apple-mobile-web-app-capable" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/App-icon@3x.png">
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/App-icon@3x.png" sizes="16x16">
