--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, minimum-scale=1.0,">
-    <meta content="yes" name="apple-mobile-web-app-capable" />
+    <meta content="yes" name="Oldham" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/App-icon@3x.png">
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/App-icon@3x.png" sizes="16x16">
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/App-icon@3x.png" sizes="32x32">
@@ -22,16 +22,11 @@
     <meta name="msapplication-TileImage" content="%PUBLIC_URL%/App-icon@3x.png">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.css">
+    <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" type="text/css" href="css/fb.css">
     <title>Oldham</title>
   </head>
   <body>
     <div id="root"></div>
-    <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', function() {
-          navigator.serviceWorker.register('/service-worker.js');
-        });
-      }
-    </script>
   </body>
 </html>
